
HOW TO UPDATE?

- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 0.6.x
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x

-----------------------------------------------------------------------
 VERSION 0.6.27
-----------------------------------------------------------------------

Fixes:
- set_item_label: fixed label always being empty #354
- modify_draw_command: fixed issue with draw image uv_max #352

-----------------------------------------------------------------------
 VERSION 0.6.24
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.24

Fixes:
- set_item_label: fixed issue causing resize of window #346
- set_item_label: fixed issue causing empty labels to not work
- add_texture: fixed compile time add_texture issue introduced in 0.6.18 #350

-----------------------------------------------------------------------
 VERSION 0.6.18
-----------------------------------------------------------------------

Fixes:
- delete_item: fixed issue with windows not working properly
- window_size: fixed issue where sizes were a frame late
- textures:    fixed several issues with texture creation

-----------------------------------------------------------------------
 VERSION 0.6.16
-----------------------------------------------------------------------

Fixes:
- delete_item: fixed issue with windows not working properly

-----------------------------------------------------------------------
 VERSION 0.6.15
-----------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.15

New Keywords:
- plot:               Added "format" keyword