@@ -36,8 +36,11 @@ namespace Marvel {
 					continue;
 
 				// set item width
-				if (item->getWidth() != 0)
+				if (item->isSizeDirty())
+				{
 					ImGui::SetNextItemWidth((float)item->getWidth());
+					item->setSizeClean();
+				}
 
 				item->draw();
 
@@ -146,8 +149,11 @@ namespace Marvel {
 					continue;
 
 				// set item width
-				if (item->getWidth() != 0)
+				if (item->isSizeDirty())
+				{
 					ImGui::SetNextItemWidth((float)item->getWidth());
+					item->setSizeClean();
+				}
 
 				item->draw();
 
