@@ -11,6 +11,7 @@ namespace Marvel {
 		// otherwise it will never show
 		m_show = true;
 		m_description.container = true;
+		
 	}
 
 	void mvTooltip::draw()
@@ -26,8 +27,11 @@ namespace Marvel {
 					continue;
 
 				// set item width
-				if (item->getWidth() > 0)
+				if (item->isSizeDirty())
+				{
 					ImGui::SetNextItemWidth((float)item->getWidth());
+					item->setSizeClean();
+				}
 
 				item->draw();
 
