@@ -28,6 +28,10 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.6.x
 
+Fixes:
+- get_item_width:  now works for non-container widgets
+- get_item_height: now works for non-container widgets
+
 -----------------------------------------------------------------------
  VERSION 0.6.27
 -----------------------------------------------------------------------
